<resources>
    <string name="app_name">OxyMars</string>
    <string name="oxigeno">OXIGENO</string>
    <string name="oxi_toque">Oxi/toque</string>
    <string name="oxi_segundo">Oxi/seg</string>
    <string name="mejoras_oxi_toque">Mejoras\nOxi/toque</string>
    <string name="mejoras_oxi_segundo">Mejoras\nOxi/segundo</string>
    <string name="mejoras_de_oxigeno_por_toque">Mejoras de oxígeno por toque</string>
    <string name="mejoras_de_oxigeno_por_segundo">Mejoras de oxígeno por segundo</string>
    <string name="precio">Precio</string>
    <string name="preferencias_juego">Preferencias del juego</string>
    <string name="notacion_smplificada">Notación simplificada (K,M,...)</string>
    <string name="fondo">Fondo</string>
    <string name="fondo1">Fondo 1</string>
    <string name="fondo2">Fondo 2</string>
    <string name="fondo3">Fondo 3</string>
    <string name="fondo4">Fondo 4</string>
    <string name="fondo5">Fondo 5</string>
    <string name="idioma">Idioma</string>
    <string name="castellano">Castellano</string>
    <string name="ingles">Inglés</string>
    <string name="cancelar">Cancelar</string>
    <string name="usuario">Usuario</string>
    <string name="compartir">Compartir</string>
    <string name="info">Info</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="login">LOGIN</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="no_tienes_usuario">¿No tienes usuario?</string>
    <string name="registrar">REGISTER</string>
    <string name="repite_contrasena">Repite la contraseña</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="volver_login">Volver al login</string>
    <string name="no_existe_usuario">Ese usuario no existe</string>
    <string name="contrasena_incorrecta">La contraseña es incorrecta</string>
    <string name="existe_usuario">Ese usuario ya existe</string>
    <string name="contrasena_no_admitida">Esa contraseña no se admite</string>
    <string name="contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="rellena_campo">Rellena este campo</string>
    <string name="twit1">¡Genial! He conseguido\u0020</string>
    <string name="twit2">\u0020de oxígeno para mi planeta en OxyMars.</string>
    <string name="ranking">Ranking</string>
    <string name="notificacion">Notificación</string>
    <string name="tu_planeta_espera">Tu planeta te espera</string>
    <string name="vuelve">Vuelve y haz de Marte un lugar mejor</string>
    <string name="hasta_otra">Hasta otra</string>
    <string name="salir">¿Quieres salir?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="como_jugar">Cómo jugar</string>
    <string name="musica">Música de fondo</string>
    <string name="sonido">Sonido</string>
    <string name="salir_si">Sí,\n volver a la Tierra</string>
    <string name="salir_no">No,\n seguir en Marte</string>
    <string name="audio">Preferencias de audio</string>
    <string name="mar">Mar</string>
    <string name="rios">Rios</string>
    <string name="hierba">Hierba</string>
    <string name="arena">Arena</string>
    <string name="hielo">Hielo</string>
    <string name="arboles">Árboles</string>
    <string name="montanas">Monatañas</string>
    <string name="flores">Flores</string>
    <string name="nieve">Nieve</string>
    <string name="humanos">Humanos</string>
    <string name="pueblos">Pueblos</string>
    <string name="minas">Minas</string>
    <string name="ciudades">Ciudades</string>
    <string name="asteroide">Asteroide</string>
    <string name="cohete">Cohete</string>
    <string name="tierra">Tierra</string>
    <string name="jupiter">Júpiter</string>
    <string name="meteorito">Meteorito</string>
    <string name="satelite">Satélite</string>
    <string name="saturno">Saturno</string>
    <string name="iss">ISS</string>
    <string name="constelaciones">Constelaciones</string>
    <string name="galaxia">Galaxia</string>
    <string name="sol">Sol</string>
    <string name="ovni">OVNI</string>
    <string name="agujeronegro">Agujero negro</string>
    <string name="borrarUsuario">¿Quieres borrar este usuario?</string>
    <string name="borradoCorrectamente">Usuario borrado correctamente</string>
    <string name="creadoCorrectamente">Usuario creado correctamente</string>
    <string name="errorCreado">Error al crear el usuario</string>
    <string name="selecciona_metodo">Selecciona un método</string>
    <string name="appwidget_text">OxyMars</string>
    <string name="add_widget">Añadir widget</string>
    <string name="configure">Configurar</string>
    <string name="cargando">Cargando</string>
    <string name="elige_cancion">Elige una canción</string>
    <string name="brote_plantado">Has plantado un brote en Marte,\nasí que has obtenido algo de oxígeno.</string>
    <string name="parrafo_ayuda">Hola compañero astronauta, te he dejado esta nota por si en algún momento se te olvida tu misión.\n\n
                Tu misión consiste en conseguir oxígeno para crear vida en Marte.\n\n
                Cada vez que se toca el planeta, se genera oxígeno, que se puede ver en la parte superior de la pantalla.\n\n
                Existen dos tipos de mejoras:\n
                   - Mejoras de oxígeno por toque: Hacen que al tocar el planeta se genere mayor cantidad de oxígeno.\n
                   - Mejoras de oxígeno por segundo: Hacen que cada segundo se obtenga mayor cantidad de oxígeno aunque no se toque el planeta.\n\n
                Existe un ranking, en el que se pueden ver la puntuación propia y la del resto de usuarios registrados.\n\n</string>


</resources>