<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo_estrellas"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:fontFamily="@font/titan_one"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/salir"
            android:textAlignment="center"
            android:textSize="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/botonNo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/layout_salir_no"
                android:fontFamily="@font/bowlby_one_sc"
                android:text="@string/salir_no"
                android:textColor="#000000"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/botonSi"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/botonSi"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/layout_salir_si"
                android:fontFamily="@font/bowlby_one_sc"
                android:text="@string/salir_si"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/botonNo"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</RelativeLayout>