<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fondoAjustes"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondoajustes"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".AjustesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTintMode="add"
        android:orientation="vertical">

        <fragment
            android:id="@+id/fragment2"
            android:name="com.example.entrega1.Preferencias"
            android:layout_width="fill_parent"
            android:layout_height="546dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textUsuarioLogout"
                android:layout_width="350dp"
                android:layout_height="23dp"
                android:layout_weight="0"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.19" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="350dp"
                android:layout_height="23dp"
                android:layout_weight="0"
                android:text="@string/usuario"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/textUsuarioLogout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/botonLogout"
                android:layout_width="135dp"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:text="@string/cerrar_sesion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textUsuarioLogout"
                app:layout_constraintVertical_bias="0.142" />

            <ImageView
                android:id="@+id/twitterImg"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toStartOf="@+id/botonLogout"
                app:layout_constraintTop_toTopOf="@+id/botonLogout"
                app:srcCompat="@drawable/twitter" />

            <ImageView
                android:id="@+id/infoImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toEndOf="@+id/botonLogout"
                app:layout_constraintTop_toTopOf="@+id/botonLogout"
                app:srcCompat="@drawable/info" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="93dp"
                android:layout_height="9dp"
                android:text="@string/compartir"
                android:textAlignment="center"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@+id/twitterImg"
                app:layout_constraintEnd_toEndOf="@+id/twitterImg"
                app:layout_constraintStart_toStartOf="@+id/twitterImg" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="91dp"
                android:layout_height="10dp"
                android:text="@string/info"
                android:textAlignment="center"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@+id/infoImg"
                app:layout_constraintEnd_toEndOf="@+id/infoImg"
                app:layout_constraintStart_toStartOf="@+id/infoImg" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>